# pypikchr

./: CHANGELOG.md  LICENSE  README.md  diagram.py  hatch_build.py  pikchr.pyx  pypikchr.pyx  pyproject.toml  setup.py  shapes.py
.github/workflows/: release.yml
src/c/: pikchr.c  pypikchr.c
src/pypikchr/: __init__.py
src/pypikchr/diagram/: __init__.py  diagram.py  layout.py  shapes.py
tests/: test_dag.py  test_features.py  test_formatting.py  test_shapes.py
