[build-system]
requires = ["hatchling >= 1.26", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "pypikchr"
description="Python wrapper for the pikchr markup language."
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

authors = [
    { name = "Gabriel Dorlhiac", email = "gabriel@dorlhiac.com" },
]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
urls = { Homepage = "https://github.com/gadorlhiac/pypikchr" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.version]
path = "src/pypikchr/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/include",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pypikchr"]

[tool.hatch.build.targets.wheel.hooks.custom]
# The custom build hook in hatch_build.py will handle C extension compilation
# and optional inclusion of the 'tests' directory if PYPIKCHR_INSTALL_TESTS is set.


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''(
    .*.sh
    #| .*.another_extension
    | README
)'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4
include = [
    "lute/**/*.py",
    "launch_scripts/*.py",
    "utilties/**/*.py",
    "workflows/**/*.py",
]
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
